test_bluesuit_console/blue_dir/include/VB6/TestFlashAPI.bas

' TestFlashAPI.bas : Declares the DLL functions for vb6.
' Generated by C:\work_bluesuite_2_5\p4\common\hosttools\bluesuite_2_5\prodtest\scripts\extract_tt_api.pl from TestFlash.h; TestPS.h;  at 03/02/14 - 11:39:57

Declare Function flInit Lib "TestFlash.dll" (ByVal port As Long, ByVal xtal As Long, ByVal delays As Long, ByVal transport As Long) As Long
Declare Function flInitSpiUnlock Lib "TestFlash.dll" (ByVal port As Long, ByVal xtal As Long, ByVal delays As Long, ByVal transport As Long, ByVal unlockKey As String) As Long
Declare Function flmOpen Lib "TestFlash.dll" (ByVal deviceMask As Long, ByVal xtal As Long, ByVal transport As Long) As Long
Declare Function flmOpenSpiUnlock Lib "TestFlash.dll" (ByVal deviceMask As Long, ByVal xtal As Long, ByVal transport As Long, ByVal unlockKey As String) As Long
Declare Function flInitTrans Lib "TestFlash.dll" (ByVal trans As String, ByVal xtal As Long, ByVal delays As Long) As Long
Declare Function flInitSpiUnlockTrans Lib "TestFlash.dll" (ByVal trans As String, ByVal xtal As Long, ByVal delays As Long, ByVal unlockKey As String) As Long
Declare Function flmOpenTrans Lib "TestFlash.dll" (ByVal deviceMask As Long, ByVal trans As String, ByVal xtal As Long) As Long
Declare Function flmOpenSpiUnlockTrans Lib "TestFlash.dll" (ByVal deviceMask As Long, ByVal trans As String, ByVal xtal As Long, ByVal unlockKey As String) As Long
Declare Function flReadProgramFiles Lib "TestFlash.dll" (ByVal filename As String) As Long
Declare Function flmReadProgramFiles Lib "TestFlash.dll" (ByVal filename As String) As Long
Declare Function flProgramBlock Lib "TestFlash.dll" () As Long
Declare Function flmProgramBlock Lib "TestFlash.dll" (ByVal deviceMask As Long, ByVal eraseFirst As Byte, ByVal verifyAfter As Byte, ByVal restartAfter As Byte) As Long
Declare Function flErase Lib "TestFlash.dll" () As Long
Declare Function flmEraseBlock Lib "TestFlash.dll" (ByVal deviceMask As Long) As Long
Declare Function flmEraseSpawn Lib "TestFlash.dll" (ByVal deviceMask As Long) As Long
Declare Function flGangProgramBlock Lib "TestFlash.dll" (ByVal deviceMask As Integer, ByVal eraseFirst As Byte, ByVal restartAfter As Byte, ByVal skipUnused As Byte) As Long
Declare Function flGetDetectedDevices Lib "TestFlash.dll" () As Integer
Declare Function flGetBitErrorField Lib "TestFlash.dll" () As Integer
Declare Function flmGetBitErrorField Lib "TestFlash.dll" () As Long
Declare Function flProgramSpawn Lib "TestFlash.dll" () As Long
Declare Function flmProgramSpawn Lib "TestFlash.dll" (ByVal deviceMask As Long, ByVal eraseFirst As Byte, ByVal verifyAfter As Byte, ByVal restartAfter As Byte) As Long
Declare Function flGangProgramSpawn Lib "TestFlash.dll" (ByVal deviceMask As Integer, ByVal eraseFirst As Byte, ByVal restartAfter As Byte, ByVal skipUnused As Byte) As Long
Declare Function flGetProgress Lib "TestFlash.dll" () As Long
Declare Function flmGetDeviceProgress Lib "TestFlash.dll" (ByVal device As Long) As Long
Declare Function flGetLastError Lib "TestFlash.dll" () As Long
Declare Function flmGetLastError Lib "TestFlash.dll" () As Long
Declare Function flmGetDeviceError Lib "TestFlash.dll" (ByVal device As Long) As Long
Declare Function flResetAndStart Lib "TestFlash.dll" () As Long
Declare Function flmResetAndStart Lib "TestFlash.dll" (ByVal deviceMask As Long) As Long
Declare Sub flClose Lib "TestFlash.dll" ()
Declare Sub flmClose Lib "TestFlash.dll" (ByVal deviceMask As Long)
Declare Function flGetVersion Lib "TestFlash.dll" (ByVal versionStr As String) As Long
Declare Function flmGetVersion Lib "TestFlash.dll" (ByVal versionStr As String) As Long
Declare Function flStopProcessor Lib "TestFlash.dll" () As Long
Declare Function flmStopProcessor Lib "TestFlash.dll" (ByVal deviceMask As Long) As Long
Declare Function flGetDownloadTime Lib "TestFlash.dll" () As Long
Declare Function flmGetDeviceDownloadTime Lib "TestFlash.dll" (ByVal device As Long) As Long
Declare Function flGetAvailableSpiPorts Lib "TestFlash.dll" (ByRef maxLen As Integer, ByVal ports As String, ByVal trans As String, ByRef count As Integer) As Long
Declare Function flmGetAvailableSpiPorts Lib "TestFlash.dll" (ByRef maxLen As Integer, ByVal ports As String, ByVal trans As String, ByRef count As Integer) As Long
Declare Function flmConvertSpiPort Lib "TestFlash.dll" (ByVal transIn As String, ByVal transOut As String, ByRef device As Long) As Long
Declare Function flGetFirmwareIds Lib "TestFlash.dll" (ByVal source As Byte, ByRef loaderId As Long, ByVal loaderName As String, ByRef stackId As Long, ByVal stackName As String, ByVal maxNameLen As Integer) As Long
Declare Function flmGetDeviceFirmwareIds Lib "TestFlash.dll" (ByVal device As Long, ByRef loaderId As Long, ByVal loaderName As String, ByRef stackId As Long, ByVal stackName As String, ByVal maxNameLen As Integer) As Long
Declare Function flmGetFileFirmwareIds Lib "TestFlash.dll" (ByRef loaderId As Long, ByVal loaderName As String, ByRef stackId As Long, ByVal stackName As String, ByVal maxNameLen As Integer) As Long
Declare Function flVerify Lib "TestFlash.dll" () As Long
Declare Function flmVerifyBlock Lib "TestFlash.dll" (ByVal deviceMask As Long, ByVal restartAfter As Byte) As Long
Declare Function flmVerifySpawn Lib "TestFlash.dll" (ByVal deviceMask As Long, ByVal restartAfter As Byte) As Long
Declare Function flGetFlashInfo Lib "TestFlash.dll" (ByRef sectors As Integer, ByRef sizeMbits As Integer, ByRef manId As Long, ByRef devId As Long) As Long
Declare Function flmGetDeviceFlashInfo Lib "TestFlash.dll" (ByVal device As Long, ByRef sectors As Integer, ByRef sizeMbits As Integer, ByRef manId As Long, ByRef devId As Long) As Long
Declare Function flSetFlashType Lib "TestFlash.dll" (ByVal aType As Byte) As Long
Declare Function flmSetFlashType Lib "TestFlash.dll" (ByVal deviceMask As Long, ByVal aType As Byte) As Long
Declare Function open_ps Lib "TestFlash.dll" (ByVal port As Long, ByVal device As Long) As Long
Declare Function close_ps Lib "TestFlash.dll" () As Long
Declare Sub set_stores Lib "TestFlash.dll" (ByVal store As Integer)
Declare Function write_ps Lib "TestFlash.dll" (ByVal key As Integer, ByRef data As Integer, ByVal aLen As Integer) As Long
Declare Function write_ps_verify Lib "TestFlash.dll" (ByVal key As Integer, ByRef data As Integer, ByVal aLen As Integer) As Long
Declare Function read_ps Lib "TestFlash.dll" (ByVal key As Integer, ByRef data As Integer, ByVal maxlen As Integer, ByRef aLen As Integer) As Long
Declare Function clear_ps Lib "TestFlash.dll" (ByVal key As Integer) As Long
Declare Function factory_set Lib "TestFlash.dll" () As Long
Declare Function e2_device Lib "TestFlash.dll" (ByVal log2bytes As Integer, ByVal addrmask As Integer) As Long
Declare Function get_firmware_id Lib "TestFlash.dll" (ByRef id As Long, ByRef nameBuffer As Integer, ByVal length As Long) As Long

' DEPRECATED FUNCTIONS

Declare Function init_flash Lib "TestFlash.dll" Alias "flInit" (ByVal port As Long, ByVal xtal As Long, ByVal delays As Long, ByVal transport As Long) As Long
Declare Function read_program_files Lib "TestFlash.dll" Alias "flReadProgramFiles" (ByVal filename As String) As Long
Declare Function program_flash_block Lib "TestFlash.dll" Alias "flProgramBlock" () As Long
Declare Function erase_flash Lib "TestFlash.dll" Alias "flErase" () As Long
Declare Function gang_program_flash_block Lib "TestFlash.dll" Alias "flGangProgramBlock" (ByVal deviceMask As Integer, ByVal eraseFirst As Byte, ByVal restartAfter As Byte, ByVal skipUnused As Byte) As Long
Declare Function get_bit_error_field Lib "TestFlash.dll" Alias "flGetBitErrorField" () As Integer
Declare Function program_flash_spawn Lib "TestFlash.dll" Alias "flProgramSpawn" () As Long
Declare Function gang_program_flash_spawn Lib "TestFlash.dll" Alias "flGangProgramSpawn" (ByVal deviceMask As Integer, ByVal eraseFirst As Byte, ByVal restartAfter As Byte, ByVal skipUnused As Byte) As Long
Declare Function get_spawned_progress Lib "TestFlash.dll" Alias "flGetProgress" () As Long
Declare Function get_spawned_error Lib "TestFlash.dll" Alias "flGetLastError" () As Long
Declare Function reset_and_start Lib "TestFlash.dll" Alias "flResetAndStart" () As Long
Declare Sub close_flash Lib "TestFlash.dll" Alias "flClose" ()
Declare Function get_version Lib "TestFlash.dll" Alias "flGetVersion" (ByVal versionStr As String) As Long
